KL - update feature